# puch-mcp

./: .dockerignore  .env  .env.example  .env.production  .gitignore  DEPLOYMENT.md  DOCKER-TROUBLESHOOTING.md  DOCKER.md  Dockerfile  Dockerfile.minimal  README.md  deploy.sh  docker-compose.yml  main.py  main_corrupted.py  main_fixed.py  pyproject.toml  railway.json  render.yaml  requirements-minimal.txt  requirements.txt  test-docker.bat  test-docker.sh  test_deployment.py
.github/workflows/: deploy.yml
