[project]
name = "guess-the-price-mcp"
version = "0.1.0"
description = "Guess the Price MCP Server for Puch AI"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.25.0",
    "pillow>=10.0.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.0",
    "readabilipy>=0.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "google-generativeai>=0.3.0",
    "aiofiles>=23.0.0",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
